--- a/templates/login.html
+++ b/templates/login.html
@@ -58,6 +58,7 @@
     <img class="mb-4" src="{{ url_for('static', filename=fname) }}" alt="" width="72" height="80">
     <!-- include image source-->
     <h1 class="h3 mb-3 fw-normal">Admin Login</h1>
+    <h1 class="h3 mb-3 fw-normal">Use username and Password as "BlogOne"</h1>
 
     <div class="form-floating">
       <input type="text" class="form-control" id="uname" name="uname" required placeholder="Your Name">
